ingress/ingress-basic.yml
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: myingress
spec:
 ingressClassName: nginx
 rules:
  - http:
     paths:
      - path: /
        pathType: Prefix
        backend:
         service:
          name: app1-nginx-clusterip-service
          port:
           number: 80
...
